# nfce-audit-platform

./: .gitignore  .slugignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: .env.example  app.py
app/templates/: auditoria.html  autor.html  base.html  cesta.html  dashboard.html  explorador.html  fluxograma_metodologia.html  home.html  inconsistencias.html  metodologia.html  perspectivas.html  relatorio_fraude.html
data/: README.md
data/raw/: Tabela_NCM_Vigente.xlsx  aliquotas_icms_ba.json  amostra_gtin_789.csv
docs/: contexto.md  perspectivas_futuras.md
notebooks/: 01_exploracao_e_validacao_gtin.ipynb  02_clustering_descricao_por_gtin.ipynb
output/: gtin_index.json  gtin_resolved.json
pipeline/: build_price_series.py  gtin_resolver.py
